--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "concurrently": "^8.2.2",
     "tailwindcss": "^3.3.5",
     "vite": "^4.4.5"
+  },
+  "dependencies": {
+    "typed.js": "^2.1.0"
   }
 }
